# waffle-cli

./: .gitignore  .pylintrc  404.html  README.md  index.html  mkdocs.yml  sitemap.xml
.devcontainer/: Dockerfile  (+5 more)
cli/: .gitignore  README.md  cli.py  pyproject.toml
cli/commands/: set_aws_profile.py
cli/dask_cli/: cli.py
cli/dask_cli/commands/: add_aws_profile.py
cli/waffle_cli/: cli.py
cli/waffle_cli/application_logic/entities/: auth_type.py  cfn_stack_state.py  deployment_setting.py  deployment_state.py  project_setting.py  project_stack_setting.py  stack_type.py
cli/waffle_cli/application_logic/gateway_interfaces/: __init__.py  deployment_settings.py  github_secrets.py  project_settings.py  stacks.py
cli/waffle_cli/commands/: __init__.py  add_local_aws_profile.py  command_type.py  configure_aws_profile.py  configure_deployment_domain.py  create_backend_service_wizard.py  create_cloudformation_wizard.py  create_deployment_certificate.py  create_deployment_settings.py  create_new_deployment.py  create_services_wizard.py  deploy_alerts.py  deploy_api.py  deploy_auth.py  deploy_auth_userpool.py  deploy_cdn.py  deploy_cfn.py  deploy_db.py  deploy_deployment.py  deploy_ecs.py  deploy_github.py  deploy_vpc.py  set_deployment_defaults.py  setup_wizard.py
cli/waffle_cli/commands/utils/: deploy_new_stack.py
cli/waffle_cli/gateways/: __init__.py  deployment_settings_with_json.py  deployment_states_with_json.py  github_secrets_with_sm.py  project_settings_with_json.py  stacks_with_cfn.py
cli/waffle_cli/utils/: progress_bar.py  progress_indicator.py
(+54 files in other folders)
