[tool.poetry]
name = "waffle-cli"
version = "0.0.1"
description = "DIY AWS SOC II Type 2 Kit CLI"
authors = ["Gergely Borgulya <gergely@borgulya.hu>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
repository = "https://github.com/WaffleCodeApp/diy-soc-aws-sdk"

[tool.poetry.dependencies]
python = "~3.11"
pydantic = "^2.6.1"
awscli = "^1.32.44"

# [tool.poetry.dependencies.waffle_cli]
# path = "."
# develop = true

[tool.poetry.scripts]
waffle = 'waffle_cli.cli:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
